# projeto-versionamento-preditiva

./: README.md  index.html  pyproject.toml
docs/: mkdocs.yml
docs/docs/: git.md  index.md
docs/site/git/: index.html
notebooks/: notebook_exemplo.ipynb  projeto_ds.ipynb
search/: search_index.json
versionamento_projetos/: utils.py
