[tool.poetry]
name = "versionamento-poetry"
version = "0.1.0"
description = ""
authors = ["JeffersonMagalhaes <jefferson.raimundomagalhaes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
mkdocs = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
